# kobserver

./: .gitignore  README.md  SKILL.md
agents/: openai.yaml
docs/superpowers/plans/: 2026-05-14-kobserver-implementation.md
docs/superpowers/specs/: 2026-05-14-kobserver-design.md
references/: data-sources.md
scripts/: kobserver.py  pyproject.toml
scripts/kobserver_core/: __init__.py  cli.py  models.py  providers.py  rendering.py  symbols.py  watchlist.py
tests/: test_cli_render_commands.py  test_cli_smoke.py  test_cli_watchlist.py  test_pyth_provider.py  test_rendering.py  test_skill_metadata.py  test_stock_provider.py  test_symbols.py  test_watchlist.py
